externals/yac/mtime/include/mtime_time.h

/**
 * @struct _time
 *
 * @brief struct _time containing usual time parameters. 
 */

struct _time
{
  int hour;	///< hour part of time.
  int minute;	///< minute part of time.
  int second;	///< second part of time.
  int ms;	///< milli-second part of time. 0<=ms<=999.
};
struct _time*
newTime(const char* time_string);
void
deallocateTime(struct _time* t);
char*
timeToString(struct _time*, char*);